[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coruscant"
version = "0.1.0"
description = "The ecumenopolis where you can find anything you need. Maybe."
authors = [
    { name = "Jean Choppin de Janvry", email = "jean.choppindejanvrydev@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "astropy",
    "scipy",
    "scikit-learn",
    "pandas",
    "fitsio",
    "healpy",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
    | \.pixi
  | build
  | dist
)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["coruscant*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
requires-pixi = ">=0.68"

[tool.pixi.dependencies]
python = "3.10.*"
astropy = "*"
black = "*"
fitsio = "*"
flake8 = "*"
healpy = "*"
ipykernel = ">=6.0"
matplotlib = "*"
numpy = "*"
pandas = "*"
pip = "*"
pytest = ">=8.0"
pyyaml = "*"
scikit-learn = "*"
scipy = "*"
setuptools = ">=61"
wheel = "*"

[tool.pixi.pypi-dependencies]
coruscant = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.tasks.setup]
cmd = "bash setup.sh"
description = "Register the default coruscant Jupyter kernel"

[tool.pixi.tasks.install]
cmd = "bash setup.sh"
description = "Alias for setup; registers the default coruscant Jupyter kernel"

[tool.pixi.tasks.test]
cmd = "pytest"
description = "Run the test suite"

[tool.pixi.tasks.format]
cmd = "black ."
description = "Format the repository with Black"

[tool.pixi.tasks.format-check]
cmd = "black --check ."
description = "Check Black formatting without writing files"

[tool.pytest.ini_options]
testpaths = ["tests"]